--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -10,10 +10,14 @@
 {% endblock %}
 {% block body %}
 <h1>Tucil Stima</h1>
-<div id="map"></div>
+<p>
+   Upload file matriks:<br>
+    <input id="input-file" type="file" name="datafile" size="40">
+    </p>
 <br>
-<button id="submit">Get route</button>
-<input onclick="deleteMarkers();" type="button" value="Clear" />
+<button id="submit">Generate</button>
+<div id="map"></div>
+<input onclick="deleteMarkers()" type="button" value="Clear" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" type="text/javascript"></script>
 <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbFefdoheWQ7qwuk3nGF882AgcwoErzl8&callback=initMap">
