--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -15,8 +15,10 @@
 </head>
 
 <body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" type="text/javascript"></script>
+  <h1>Tucil Stima</h1>
   {% block body %}
   {% endblock %}
-
+  
 </body>
 </html>
