--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -9,20 +9,12 @@
 </style>
 {% endblock %}
 {% block body %}
-<h1>Tucil Stima</h1>
 <p>
    Upload file matriks:<br>
     <input id="input-file" type="file" name="datafile" size="40">
     </p>
 <br>
 <button id="submit">Generate</button>
-<div id="map"></div>
-<input onclick="deleteMarkers()" type="button" value="Clear" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" type="text/javascript"></script>
-<script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbFefdoheWQ7qwuk3nGF882AgcwoErzl8&callback=initMap">
-</script>
-<script type = "text/javascript" src="{{ url_for('static', filename='script.js') }}">
-
+<script type = "text/javascript" src="{{ url_for('static', filename='script.js') }}"></script>
 </script>
 {% endblock %}
