--- a/web/templates/result.html
+++ b/web/templates/result.html
@@ -18,16 +18,42 @@
     <button>Kembali</button>
 </form>
 <script>
+    let map
+
     var json = "{{ res }}"
     var listCoor = JSON.parse(json.replace(/&#34;/g,'"'))
+
+    var node = "{{ node }}"
+    var listNode = JSON.parse(node.replace(/&#34;/g,'"'))
+
+    var name = "{{ nodeNames }}"
+    var nodeNames = JSON.parse(name.replace(/&#34;/g,'"'))
+
+    console.log(nodeNames)
+
     
-    let map
+    
     function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
             zoom: 15,
             center: listCoor[0],
             mapTypeId: "terrain",
         });
+
+        function addMarker(props) {
+            var marker = new google.maps.Marker({
+                position: props.coor,
+                map: map
+            })
+
+            var infoWindow = new google.maps.InfoWindow({
+                content: props.content
+            })
+
+            marker.addListener('click', function() {
+                infoWindow.open(map, marker)
+            })
+        }
         
         const route = new google.maps.Polyline({
             path: listCoor,
@@ -37,6 +63,12 @@
             strokeWeight: 2,
         });
         route.setMap(map);
+
+        for (var i = 0; i < listNode.length; i++) {
+            var label = "<h3>" + nodeNames[i] + "</h3>"
+            addMarker({coor:listNode[i], content:label})
+        }
+
     } 
 
 
