--- a/web/templates/result.html
+++ b/web/templates/result.html
@@ -11,9 +11,12 @@
 {% block body %}
 <h2>Hasil pencarian Rute</h2>
 <br>
+<h3>Lintasan terpendek (merah)</h3>
 <div id="map"></div>
 <!-- <input onclick="deleteMarkers()" type="button" value="Clear" /> -->
+<br>
 
+<h3>Total jarak: {{ dist }} km</h3>
 <form action="{{ url_for('index') }}" method="get"> 
     <button>Kembali</button>
 </form>
