--- a/web/templates/result.html
+++ b/web/templates/result.html
@@ -9,7 +9,7 @@
 </style>
 {% endblock %}
 {% block body %}
-<h2>Hasil pencarian Rute</h2>
+<h2>Hasil pencarian rute untuk {{ origin }} - {{ goal }}</h2>
 <br>
 <h3>Lintasan terpendek (merah)</h3>
 <div id="map"></div>
