--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -36,7 +36,7 @@
                 </ul>
                 <br>
             </li>
-            <li>Klik tombol "Baca File</li><br>
+            <li>Klik tombol "Baca File"</li><br>
             <li>Pilih lokasi awal dan tujuan, sesuai dengan nama pada lokasi pada file matriks</li><br>
             <li>Klik tombol "Cari Rute"</li><br>
             <li>Aplikasi akan mengarahkan Anda ke halaman hasil</li>
